--- a/server/views/pages/log-application/confirm/partials/app-type-summary-list-header.njk
+++ b/server/views/pages/log-application/confirm/partials/app-type-summary-list-header.njk
@@ -1,8 +1,8 @@
-{% macro appTypeSummaryListHeader(title, isUpdate) %}
+{% macro appTypeSummaryListHeader(title, username, appId, isUpdate) %}
   <div class="govuk-summary-list--header">
     <h2 class="govuk-heading-m">{{ title }}</h2>
-    {% if not isUpdate %}
-      <a href="/log/application-details" class="govuk-body">
+    {% if isUpdate %}
+      <a href="/applications/{{ username }}/{{ appId }}/change"  class="govuk-body">
         Change <span class="govuk-visually-hidden">log details</span>
       </a>
     {% endif %}  
