--- a/server/views/pages/log-application/confirm/partials/supply-list-of-pin-phone-contacts.njk
+++ b/server/views/pages/log-application/confirm/partials/supply-list-of-pin-phone-contacts.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryListHeader("Supply contact list", isUpdate) }}
+{{ appTypeSummaryListHeader("Supply contact list", application.requestedBy.username, application.id, isUpdate) }}
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
