--- a/server/views/pages/log-application/confirm/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/confirm/partials/swap-visiting-orders-for-pin-credit.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryListHeader("VOs to swap") }}
+{{ appTypeSummaryListHeader("VOs to swap", application.requestedBy.username, application.id, isUpdate) }}
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
