--- a/server/views/pages/log-application/submit/index.njk
+++ b/server/views/pages/log-application/submit/index.njk
@@ -6,7 +6,7 @@
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
 
 {% if isUpdated %}
-  {% set panelTitle = "Check details page updated" %}
+  {% set panelTitle = "Application updated" %}
 {% else %}
   {% set panelTitle = "Application submitted" %}
 {% endif %}
