Feature/ra 367 change log details (#109)
* Change page - UI

* Change link - wip

* Removing unused import

* Change link

--- a/server/views/pages/log-application/confirm/partials/app-type-summary-list-header.njk
+++ b/server/views/pages/log-application/confirm/partials/app-type-summary-list-header.njk
@@ -1,10 +1,14 @@
-{% macro appTypeSummaryListHeader(title, isUpdate) %}
+{% macro appTypeSummaryListHeader(title, username, appId, isUpdate) %}
+  {% if isUpdate %}
+    {% set changeUrl = "/applications/" + username + "/" + appId + "/change" %}
+  {% else %}
+    {% set changeUrl = "/log/application-details" %}
+  {% endif %}
+
   <div class="govuk-summary-list--header">
     <h2 class="govuk-heading-m">{{ title }}</h2>
-    {% if not isUpdate %}
-      <a href="/log/application-details" class="govuk-body">
-        Change <span class="govuk-visually-hidden">log details</span>
-      </a>
-    {% endif %}  
+    <a href="{{ changeUrl }}" class="govuk-body">
+      Change <span class="govuk-visually-hidden">log details</span>
+    </a>
   </div>
 {% endmacro %}
