fix: text change for snag-3

--- a/server/views/pages/log-application/confirm/index.njk
+++ b/server/views/pages/log-application/confirm/index.njk
@@ -46,7 +46,7 @@
               value: { text: applicationData.prisoner }
             },
             {
-              key: { text: "Submitted on" },
+              key: { text: "Date sent" },
               value: { text: applicationData.date }
             }
           ]
