--- a/server/views/pages/applications/change/partials/add-emergency-pin-phone-credit.njk
+++ b/server/views/pages/applications/change/partials/add-emergency-pin-phone-credit.njk
@@ -11,7 +11,7 @@
   classes: "govuk-input--width-5",
   spellcheck: false,
   hint: {
-    text: "Use only multiples of £1, with a limit of £5"
+    text: "Use only multiples of £1"
   },
   inputmode: "numeric",
   value: amount,
