--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -64,3 +64,9 @@
   margin-bottom: 0;
   color: $govuk-secondary-text-colour;
 }
+
+.govuk-breadcrumbs,
+.govuk-back-link {
+  display: block;
+  margin-top: govuk-spacing(-4);
+}
