--- a/server/views/pages/applications/action/index.njk
+++ b/server/views/pages/applications/action/index.njk
@@ -1,12 +1,34 @@
-{% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
-{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
+{%- from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs -%}
+{%- from "govuk/components/button/macro.njk" import govukButton -%}
+{%- from "govuk/components/character-count/macro.njk" import govukCharacterCount -%}
+{%- from "govuk/components/error-summary/macro.njk" import govukErrorSummary -%}
+{%- from "govuk/components/radios/macro.njk" import govukRadios -%}
 
 {% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
+
+{% block beforeContent %}
+  <div class="govuk-body govuk-width-container">
+    {{ govukBreadcrumbs({
+      items: [
+        {
+          text: "Digital Prisons Services",
+          href: dpsUrl
+        },
+        {
+          text: "Applications",
+          href: "/"
+        },
+        {
+          text: "View all applications",
+          href: "/applications"
+        }
+      ]
+    }) }}
+  </div>
+{% endblock %}
 
 {% block content %}
   <div class="govuk-body govuk-width-container">
