--- a/server/views/pages/applications/history/index.njk
+++ b/server/views/pages/applications/history/index.njk
@@ -1,9 +1,31 @@
+{%- from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs -%}
 {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
 
 {% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
+
+{% block beforeContent %}
+  <div class="govuk-body govuk-width-container">
+    {{ govukBreadcrumbs({
+      items: [
+        {
+          text: "Digital Prisons Services",
+          href: dpsUrl
+        },
+        {
+          text: "Applications",
+          href: "/"
+        },
+        {
+          text: "View all applications",
+          href: "/applications"
+        }
+      ]
+    }) }}
+  </div>
+{% endblock %}
 
 {% block content %}
   <div class="govuk-body govuk-width-container govuk!">
