remove application id from view app

--- a/server/views/pages/applications/view/index.njk
+++ b/server/views/pages/applications/view/index.njk
@@ -51,8 +51,7 @@
             }] } 
           },
           { key: { text: "Application type" }, value: { text: title } },
-          { key: { text: "Date sent" }, value: { text: application.requestedDate } },
-          { key: { text: "Application ID" }, value: { text: application.id } }
+          { key: { text: "Date sent" }, value: { text: application.requestedDate } }
         ]
       }) }}
 
