--- a/server/views/pages/applications.njk
+++ b/server/views/pages/applications.njk
@@ -13,7 +13,7 @@
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-l">Applications</h1>
           <p class="govuk-body-l">Log, action and reply to prisoner applications. You can also forward applications to other departments.</p>
-          <p class="govuk-body">Give us your <a href="">feedback</a>.</p>
+          <p class="govuk-body">Give us your <a href="https://www.smartsurvey.co.uk/s/EC7Z5H/" target="_blank">feedback</a>.</p>
         </div>
       </div>
     </div>
