small text amends

--- a/server/views/pages/static-pages/accessibility-statement.njk
+++ b/server/views/pages/static-pages/accessibility-statement.njk
@@ -103,7 +103,7 @@
             Some areas have weak colour contrast when keyboard focus and hover is combined. This fails WCAG 2.2 success criterion 1.4.3 Contrast (Minimum).
           </li>
           <li>
-            Some text areas, eg ‘Menu’ und the Search button, may be cut off at 400% zoom, this is under review. This fails WCAG 2.2 success criterion 1.4.10 Reflow.
+            Some text areas, eg ‘Menu’ and the Search button, may be cut off at 400% zoom, this is under review. This fails WCAG 2.2 success criterion 1.4.10 Reflow.
           </li>
           <li>
             The datepicker and sortable table components have 
@@ -119,7 +119,7 @@
 
         <h2 class="govuk-heading-l">Preparation of this accessibility statement</h2>
         
-        <p>This statement was prepared on [May 20 2025]. It was last reviewed on [XXX XXX 2025 (pilot go live date)].</p>
+        <p>This statement was prepared on May 20 2025. It was last reviewed on June 17 2025 (pilot go live date).</p>
 
         <p>This service was last reviewed on April 2 2025 against the WCAG 2.2 AA standard.</p>
         
