--- a/server/views/pages/static-pages/accessibility-statement.njk
+++ b/server/views/pages/static-pages/accessibility-statement.njk
@@ -11,7 +11,7 @@
           Accessibility statement for Manage Applications 
         </h1>
 
-        <p>(Holding statement for Private Beta-May 20 2025)</p>
+        <p>(Holding statement for Private Beta - May 20 2025)</p>
 
         <h2 class="govuk-heading-l">{{ pageTitle }}</h2>
 
@@ -119,7 +119,7 @@
 
         <h2 class="govuk-heading-l">Preparation of this accessibility statement</h2>
         
-        <p>This statement was prepared on May 20 2025. It was last reviewed on June 17 2025 (pilot go live date).</p>
+        <p>This statement was prepared on May 20 2025. It was last reviewed on June 17 2025.</p>
 
         <p>This service was last reviewed on April 2 2025 against the WCAG 2.2 AA standard.</p>
         
