--- a/server/views/pages/log-application/application-details/index.njk
+++ b/server/views/pages/log-application/application-details/index.njk
@@ -1,12 +1,12 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
+{% from "./partials/errors.njk" import renderErrorSummary %}
 
 
 {% extends "../../../partials/layout.njk" %}
@@ -23,55 +23,7 @@
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half">
-        {% if errors %}
-          {% set errorList = [] %}
-
-          {% if errors.Details %}
-            {% set errorList = errorList.concat([{ text: errors.Details.text, href: "#details" }]) %}
-          {% endif %}
-
-          {% if errors.Amount %}
-            {% set errorList = errorList.concat([{ text: errors.Amount.text, href: "#amount" }]) %}
-          {% endif %}
-
-          {% if errors.Reason %}
-            {% set errorList = errorList.concat([{ text: errors.Reason.text, href: "#reason" }]) %}
-          {% endif %}
-
-          {% if errors.firstName %}
-            {% set errorList = errorList.concat([{ text: errors.firstName.text, href: "#firstName" }]) %}
-          {% endif %}
-
-          {% if errors.lastName %}
-            {% set errorList = errorList.concat([{ text: errors.lastName.text, href: "#lastName" }]) %}
-          {% endif %}
-
-          {% if errors.dateOfBirthOrAge %}
-            {% set errorList = errorList.concat([{ text: errors.dateOfBirthOrAge.text, href: "#dateOfBirthOrAge" }]) %}
-          {% endif %}
-
-          {% if errors.dob %}
-            {% set errorList = errorList.concat([{ text: errors.dob.text, href: "#dob" }]) %}
-          {% endif %}
-
-          {% if errors.age %}
-            {% set errorList = errorList.concat([{ text: errors.age.text, href: "#age" }]) %}
-          {% endif %}
-
-          {% if errors.relationship %}
-            {% set errorList = errorList.concat([{ text: errors.relationship.text, href: "#relationship" }]) %}
-          {% endif %}
-          
-          {% if errors.telephone1 %}
-            {% set errorList = errorList.concat([{ text: errors.telephone1.text, href: "#telephone1" }]) %}
-          {% endif %}
-
-          {{ govukErrorSummary({
-            titleText: "There is a problem",
-            errorList: errorList
-          }) }}
-        {% endif %}
-
+        {{ renderErrorSummary(errors) }}
         <span class="govuk-caption-xl">{{ applicationType.name }}</span>
         <h1 class="govuk-heading-xl govuk-!-margin-top-0">Log details</h1>
 
