--- a/server/views/pages/log-application/confirm/partials/add-social-pin-phone-contact.njk
+++ b/server/views/pages/log-application/confirm/partials/add-social-pin-phone-contact.njk
@@ -1,51 +1,95 @@
 {{ appTypeSummaryListHeader("New social contact to add", application.requestedBy.username, application.id, isUpdate) }}
 
+{% set rows = [] %}
+
+{% set _ = rows.push({
+  key: { text: "First name" },
+  value: { text: applicationData.request.firstName }
+}) %}
+
+{% set _ = rows.push({
+  key: { text: "Last name" },
+  value: { text: applicationData.request.lastName }
+}) %}
+
+{% if applicationData.request.dateOfBirthOrAge == "donotknow" %}
+  {% set _ = rows.push({
+    key: { text: "Date of birth or age" },
+    value: { text: "Do not know" }
+  }) %}
+{% elseif applicationData.request.dateOfBirthOrAge == "age" %}
+  {% set _ = rows.push({
+    key: { text: "Age" },
+    value: { text: applicationData.request.age }
+  }) %}
+{% else %}
+  {% set dob = applicationData.request.dob %}
+  {% if dob.day and dob.month and dob.year %}
+    {% set formattedDob = dob.day + '/' + dob.month + '/' + dob.year %}
+  {% else %}
+    {% set formattedDob = "Not provided" %}
+  {% endif %}
+  {% set _ = rows.push({
+    key: { text: "Date of birth" },
+    value: { text: formattedDob }
+  }) %}
+{% endif %}
+
+{% set _ = rows.push({
+  key: { text: "Relationship" },
+  value: { text: applicationData.request.relationship }
+}) %}
+
+{% if applicationData.request.addressLine1 %}
+  {% set _ = rows.push({
+    key: { text: "Address line 1" },
+    value: { text: applicationData.request.addressLine1 }
+  }) %}
+{% endif %}
+
+{% if applicationData.request.addressLine2 %}
+  {% set _ = rows.push({
+    key: { text: "Address line 2" },
+    value: { text: applicationData.request.addressLine2 }
+  }) %}
+{% endif %}
+
+{% if applicationData.request.townOrCity %}
+  {% set _ = rows.push({
+    key: { text: "Town or city" },
+    value: { text: applicationData.request.townOrCity }
+  }) %}
+{% endif %}
+
+{% if applicationData.request.postcode %}
+  {% set _ = rows.push({
+    key: { text: "Postcode" },
+    value: { text: applicationData.request.postcode }
+  }) %}
+{% endif %}
+
+{% if applicationData.request.country %}
+  {% set _ = rows.push({
+    key: { text: "Country" },
+    value: { text: applicationData.request.country }
+  }) %}
+{% endif %}
+
+{% if applicationData.request.telephone1 %}
+  {% set _ = rows.push({
+    key: { text: "Telephone number 1" },
+    value: { text: applicationData.request.telephone1 }
+  }) %}
+{% endif %}
+
+{% if applicationData.request.telephone2 %}
+  {% set _ = rows.push({
+    key: { text: "Telephone number 2" },
+    value: { text: applicationData.request.telephone2 }
+  }) %}
+{% endif %}
+
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
-  rows: [
-    {
-      key: { text: "First name" },
-      value: applicationData.request.firstName
-    },
-    {
-      key: { text: "Last name" },
-      value: applicationData.request.lastName
-    },
-    {
-      key: { text: "Date of birth or age" },
-      value: applicationData.request.dateOfBirthOrAge
-    },
-    {
-      key: { text: "Relationship" },
-      value: applicationData.request.relationship
-    },
-    {
-      key: { text: "Address line 1" },
-      value: applicationData.request.addressLine1
-    },
-    {
-      key: { text: "Address line 2" },
-      value: applicationData.request.addressLine2
-    },
-    {
-      key: { text: "Town or city" },
-      value: applicationData.request.townOrCity
-    },
-    {
-      key: { text: "Postcode" },
-      value: applicationData.request.postcode
-    },
-    {
-      key: { text: "Country" },
-      value: applicationData.request.country
-    },
-    {
-      key: { text: "Telephone number 1" },
-      value: applicationData.request.telephone1
-    },
-    {
-      key: { text: "Telephone number 2" },
-      value: applicationData.request.telephone2
-    }
-  ]
+  rows: rows
 }) }}
