--- a/server/views/pages/applications/view/index.njk
+++ b/server/views/pages/applications/view/index.njk
@@ -71,7 +71,7 @@
               }
             }] } 
           },
-          { key: { text: "Location" }, value: { text: application.requestedBy.location } },
+          { key: { text: "Location" }, value: { text: application.requestedBy.cellLocation } },
           { 
             key: { text: "Alerts" }, 
             value: { text: application.requestedBy.alerts or 0 }, 
