--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -83,11 +83,8 @@
           </div>
 
           {% if prisonerName or prisonerLookupButton == 'true' %}
-            {% if prisonerName %}
-              {% set insetText = "Prisoner name: " + prisonerName %}
-            {% else %}
-              {% set insetText = "Prisoner name: Not found" %}
-            {% endif %}  
+            {% set name = prisonerName or 'Not found' %}
+            {% set insetText = "Prisoner name: " + name %}
             {% set insetClasses = "govuk-!-margin-top-0" %}
           {% else %}
             {% set insetText = "" %}
