--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -82,8 +82,9 @@
             </button>
           </div>
 
-          {% if prisonerName %}
-            {% set insetText = "Prisoner name: " + prisonerName %}
+          {% if prisonerName or prisonerLookupButton == 'true' %}
+            {% set name = prisonerName or 'Not found' %}
+            {% set insetText = "Prisoner name: " + name %}
             {% set insetClasses = "govuk-!-margin-top-0" %}
           {% else %}
             {% set insetText = "" %}
