--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -53,7 +53,7 @@
           <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
           <input type="hidden" name="prisonerLookupButton" id="prisoner-lookup-button" value="{{ prisonerLookupButton | default('false') }}" />
           
-          <div class="govuk-form-group govuk-!-margin-bottom-0 {% if errors.prisonNumber %} govuk-form-group--error {% endif %}">
+          <div class="govuk-form-group {% if errors.prisonNumber %} govuk-form-group--error {% endif %}">
             <label class="govuk-label govuk-label--s" for="prisonNumber">
               Prison number
             </label>
@@ -77,7 +77,7 @@
               aria-describedby="prison-number-error" 
               value="{{ prisonNumber | default('') }}">
 
-            <button id="prisoner-number-lookup" class="govuk-button govuk-button--secondary" data-test="find-prisoner-button">
+            <button id="prisoner-number-lookup" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-1" data-test="find-prisoner-button">
               Find prisoner
             </button>
           </div>
