remove existence check

--- a/server/views/pages/applications/view/partials/application-details.njk
+++ b/server/views/pages/applications/view/partials/application-details.njk
@@ -29,7 +29,7 @@
   value: { text: application.requestedDate }
 }) %}
 
-{% if applicationType.value == "add-social-pin-phone-contact" and application.earlyDaysCentre %}
+{% if applicationType.value == "add-social-pin-phone-contact" %}
   {% set _ = rows.push({
     key: { text: "First night or early days centre" },
     value: { text: application.earlyDaysCentre }
